add sleed as habit

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <div class="habit" data-name="water">Water</div>
         <div class="habit" data-name="food">Food</div>
         <div class="habit" data-name="journal">Journal</div>
+        <div class="habit" data-name="sleep">Sleep</div>
       </div>
       <div class="days">
         
